--- a/GridSearchKNN_Case_Study/GridSearchKNN_Case_Study.ipynb
+++ b/GridSearchKNN_Case_Study/GridSearchKNN_Case_Study.ipynb
@@ -490,15 +490,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x0000022088988B08>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000220865B3348>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088A9B588>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000022088AD7448>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088B0D248>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088B42FC8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000022088B7BFC8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088BB2D08>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088BB2F08>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002008B3966C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B477748>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B4B3608>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002008B4EC488>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B5252C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B55E188>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002008B590FC8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B5C8D08>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B5C8F08>]],\n",
        "      dtype=object)"
       ]
      },
@@ -560,15 +560,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x0000022088A729C8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088DDC808>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088E4F488>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000022088E84C88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088EBCB08>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088EF59C8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x0000022088F2F788>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088F684C8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x0000022088F686C8>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002008B39CCC8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B7E1208>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B862A88>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002008B89E248>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B8D4988>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B90E6C8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000002008B947488>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B9811C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000002008B9813C8>]],\n",
        "      dtype=object)"
       ]
      },
@@ -938,7 +938,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x22089e475c8>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x2008b43c048>"
       ]
      },
      "execution_count": 24,
@@ -1088,18 +1088,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestClassifier(),\n",
+       "             param_grid={'bootstrap': [True, False],\n",
+       "                         'max_depth': [5, 8, 15, 25, 30, None],\n",
+       "                         'max_features': ['auto', 'sqrt'],\n",
+       "                         'min_samples_leaf': [1, 2, 4],\n",
+       "                         'min_samples_split': [2, 5, 10],\n",
+       "                         'n_estimators': [100, 300, 500, 800, 1200]})"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "rfc = RandomForestClassifier()\n",
     "# Number of trees in random forest\n",
-    "n_estimators = [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)]\n",
+    "n_estimators = [100, 300, 500, 800, 1200]\n",
     "# Number of features to consider at every split\n",
     "max_features = ['auto', 'sqrt']\n",
     "# Maximum number of levels in tree\n",
-    "max_depth = [int(x) for x in np.linspace(10, 110, num = 11)]\n",
+    "max_depth = [5, 8, 15, 25, 30]\n",
     "max_depth.append(None)\n",
     "# Minimum number of samples required to split a node\n",
     "min_samples_split = [2, 5, 10]\n",
@@ -1120,23 +1137,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap': True,\n",
+       " 'max_depth': 30,\n",
+       " 'max_features': 'sqrt',\n",
+       " 'min_samples_leaf': 2,\n",
+       " 'min_samples_split': 5,\n",
+       " 'n_estimators': 100}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rfc_cv.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=30, max_features='sqrt', min_samples_leaf=2,\n",
+       "                       min_samples_split=5)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_grid = rfc_cv.best_estimator_\n",
+    "best_grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=30, max_features='sqrt', min_samples_leaf=2,\n",
+       "                       min_samples_split=5)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_grid = rfc_cv.best_estimator_\n",
-    "grid_accuracy = evaluate(best_grid, X_test, y_test)"
+    "y_pred = best_grid.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    Negative       0.82      0.79      0.80       151\n",
+      "    Positive       0.63      0.68      0.65        80\n",
+      "\n",
+      "    accuracy                           0.75       231\n",
+      "   macro avg       0.72      0.73      0.73       231\n",
+      "weighted avg       0.75      0.75      0.75       231\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred, target_names=['Negative', 'Positive']))"
    ]
   },
   {
