--- a/Bayesian_Optimization_Case_Study/Bayesian_optimization_case_study.ipynb
+++ b/Bayesian_Optimization_Case_Study/Bayesian_optimization_case_study.ipynb
@@ -26,20 +26,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Pssx080d-Ulf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting catboost\n",
+      "  Downloading catboost-0.24.4-cp37-none-win_amd64.whl (65.4 MB)\n",
+      "Requirement already satisfied: graphviz in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from catboost) (0.15)\n",
+      "Requirement already satisfied: six in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from catboost) (1.15.0)\n",
+      "Requirement already satisfied: scipy in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from catboost) (1.5.0)\n",
+      "Requirement already satisfied: numpy>=1.16.0 in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from catboost) (1.18.5)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from catboost) (3.2.2)\n",
+      "Requirement already satisfied: plotly in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from catboost) (4.14.1)\n",
+      "Requirement already satisfied: pandas>=0.24.0 in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from catboost) (1.0.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (2.8.1)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (2.4.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from matplotlib->catboost) (1.2.0)\n",
+      "Requirement already satisfied: retrying>=1.3.3 in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from plotly->catboost) (1.3.3)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\prakash\\anaconda3\\lib\\site-packages (from pandas>=0.24.0->catboost) (2020.1)\n",
+      "Installing collected packages: catboost\n",
+      "Successfully installed catboost-0.24.4\n"
+     ]
+    }
+   ],
    "source": [
-    "#! pip install bayesian-optimization"
+    "! pip install catboost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T16:39:09.312682Z",
@@ -64,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -78,16 +102,14 @@
     {
      "data": {
       "text/plain": [
-       "['.config',\n",
-       " 'flight_delays_test.csv.zip',\n",
-       " 'flight_delays_train.csv.zip',\n",
-       " 'sample_data']"
+       "['.ipynb_checkpoints',\n",
+       " 'Bayesian_optimization_case_study.ipynb',\n",
+       " 'flight_delays_test.csv',\n",
+       " 'flight_delays_train.csv']"
       ]
      },
-     "execution_count": 45,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -168,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -192,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -232,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -249,11 +271,11 @@
      "text": [
       "|   iter    |  target   |     a     |     b     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m 7.847   \u001b[0m | \u001b[0m 1.67    \u001b[0m | \u001b[0m 6.177   \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m 7.075   \u001b[0m | \u001b[0m 1.418   \u001b[0m | \u001b[0m 5.657   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m 7.476   \u001b[0m | \u001b[0m 2.129   \u001b[0m | \u001b[0m 5.348   \u001b[0m |\n",
-      "| \u001b[95m 4       \u001b[0m | \u001b[95m 10.0    \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 7.0     \u001b[0m |\n",
-      "| \u001b[0m 5       \u001b[0m | \u001b[0m 9.387   \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 6.387   \u001b[0m |\n",
+      "| \u001b[0m 1       \u001b[0m | \u001b[0m 6.148   \u001b[0m | \u001b[0m 1.499   \u001b[0m | \u001b[0m 4.649   \u001b[0m |\n",
+      "| \u001b[95m 2       \u001b[0m | \u001b[95m 7.998   \u001b[0m | \u001b[95m 2.939   \u001b[0m | \u001b[95m 5.059   \u001b[0m |\n",
+      "| \u001b[0m 3       \u001b[0m | \u001b[0m 6.726   \u001b[0m | \u001b[0m 2.304   \u001b[0m | \u001b[0m 4.421   \u001b[0m |\n",
+      "| \u001b[95m 4       \u001b[0m | \u001b[95m 8.397   \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 5.397   \u001b[0m |\n",
+      "| \u001b[95m 5       \u001b[0m | \u001b[95m 9.975   \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 6.975   \u001b[0m |\n",
       "=================================================\n"
      ]
     }
@@ -274,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -289,19 +311,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 3.0, 'b': 7.0}\n"
+      "{'a': 3.0, 'b': 6.975254193557683}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "10.0"
+       "9.975254193557683"
       ]
      },
-     "execution_count": 49,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 14,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -341,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -349,8 +369,8 @@
    },
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('flight_delays_train.csv.zip')\n",
-    "test_df = pd.read_csv('flight_delays_test.csv.zip')"
+    "train_df = pd.read_csv('flight_delays_train.csv')\n",
+    "test_df = pd.read_csv('flight_delays_test.csv')"
    ]
   },
   {
@@ -365,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -474,20 +494,23 @@
        "</div>"
       ],
       "text/plain": [
-       "  Month DayofMonth DayOfWeek  DepTime  ... Origin Dest Distance  dep_delayed_15min\n",
-       "0   c-8       c-21       c-7     1934  ...    ATL  DFW      732                  N\n",
-       "1   c-4       c-20       c-3     1548  ...    PIT  MCO      834                  N\n",
-       "2   c-9        c-2       c-5     1422  ...    RDU  CLE      416                  N\n",
-       "3  c-11       c-25       c-6     1015  ...    DEN  MEM      872                  N\n",
-       "4  c-10        c-7       c-6     1828  ...    MDW  OMA      423                  Y\n",
+       "  Month DayofMonth DayOfWeek  DepTime UniqueCarrier Origin Dest  Distance  \\\n",
+       "0   c-8       c-21       c-7     1934            AA    ATL  DFW       732   \n",
+       "1   c-4       c-20       c-3     1548            US    PIT  MCO       834   \n",
+       "2   c-9        c-2       c-5     1422            XE    RDU  CLE       416   \n",
+       "3  c-11       c-25       c-6     1015            OO    DEN  MEM       872   \n",
+       "4  c-10        c-7       c-6     1828            WN    MDW  OMA       423   \n",
        "\n",
-       "[5 rows x 9 columns]"
+       "  dep_delayed_15min  \n",
+       "0                 N  \n",
+       "1                 N  \n",
+       "2                 N  \n",
+       "3                 N  \n",
+       "4                 Y  "
       ]
      },
-     "execution_count": 51,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 16,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -507,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -600,10 +623,8 @@
        "max      2534.000000    4962.00000"
       ]
      },
-     "execution_count": 52,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 17,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -633,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:38:42.677690Z",
@@ -662,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -727,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -751,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -776,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -800,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T14:31:58.412296Z",
@@ -859,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:40:14.034265Z",
@@ -910,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:48:04.682447Z",
@@ -930,7 +951,21 @@
      "output_type": "stream",
      "text": [
       "|   iter    |  target   | lambda_l1 | lambda_l2 | max_depth | min_ch... | min_da... | num_le... |\n",
-      "-------------------------------------------------------------------------------------------------\n"
+      "-------------------------------------------------------------------------------------------------\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=601, min_child_samples=1124 will be ignored. Current value: min_data_in_leaf=601\n",
+      "| \u001b[0m 1       \u001b[0m | \u001b[0m 0.7246  \u001b[0m | \u001b[0m 0.03232 \u001b[0m | \u001b[0m 0.03705 \u001b[0m | \u001b[0m 17.64   \u001b[0m | \u001b[0m 1.124e+0\u001b[0m | \u001b[0m 601.8   \u001b[0m | \u001b[0m 66.79   \u001b[0m |\n",
+      "| \u001b[95m 2       \u001b[0m | \u001b[95m 0.743   \u001b[0m | \u001b[95m 0.01049 \u001b[0m | \u001b[95m 0.01114 \u001b[0m | \u001b[95m 43.72   \u001b[0m | \u001b[95m 7.44e+03\u001b[0m | \u001b[95m 1.224e+0\u001b[0m | \u001b[95m 3.008e+0\u001b[0m |\n",
+      "| \u001b[95m 3       \u001b[0m | \u001b[95m 0.7435  \u001b[0m | \u001b[95m 0.005131\u001b[0m | \u001b[95m 0.005249\u001b[0m | \u001b[95m 56.99   \u001b[0m | \u001b[95m 8.069e+0\u001b[0m | \u001b[95m 1.838e+0\u001b[0m | \u001b[95m 1.878e+0\u001b[0m |\n",
+      "| \u001b[95m 4       \u001b[0m | \u001b[95m 0.7437  \u001b[0m | \u001b[95m 0.01214 \u001b[0m | \u001b[95m 0.01421 \u001b[0m | \u001b[95m 60.36   \u001b[0m | \u001b[95m 9.993e+0\u001b[0m | \u001b[95m 1.948e+0\u001b[0m | \u001b[95m 3.998e+0\u001b[0m |\n",
+      "| \u001b[0m 5       \u001b[0m | \u001b[0m 0.7378  \u001b[0m | \u001b[0m 0.01019 \u001b[0m | \u001b[0m 0.01478 \u001b[0m | \u001b[0m 24.67   \u001b[0m | \u001b[0m 945.9   \u001b[0m | \u001b[0m 1.088e+0\u001b[0m | \u001b[0m 323.1   \u001b[0m |\n",
+      "| \u001b[0m 6       \u001b[0m | \u001b[0m 0.7433  \u001b[0m | \u001b[0m 0.02271 \u001b[0m | \u001b[0m 0.03561 \u001b[0m | \u001b[0m 8.139   \u001b[0m | \u001b[0m 8.04e+03\u001b[0m | \u001b[0m 1.847e+0\u001b[0m | \u001b[0m 1.769e+0\u001b[0m |\n",
+      "| \u001b[0m 7       \u001b[0m | \u001b[0m 0.7431  \u001b[0m | \u001b[0m 0.03894 \u001b[0m | \u001b[0m 0.004737\u001b[0m | \u001b[0m 12.37   \u001b[0m | \u001b[0m 7.454e+0\u001b[0m | \u001b[0m 1.343e+0\u001b[0m | \u001b[0m 2.068e+0\u001b[0m |\n",
+      "| \u001b[0m 8       \u001b[0m | \u001b[0m 0.7279  \u001b[0m | \u001b[0m 0.006303\u001b[0m | \u001b[0m 0.04792 \u001b[0m | \u001b[0m 43.11   \u001b[0m | \u001b[0m 8.208e+0\u001b[0m | \u001b[0m 873.1   \u001b[0m | \u001b[0m 2.521e+0\u001b[0m |\n",
+      "| \u001b[0m 9       \u001b[0m | \u001b[0m 0.7435  \u001b[0m | \u001b[0m 0.007976\u001b[0m | \u001b[0m 0.003246\u001b[0m | \u001b[0m 60.5    \u001b[0m | \u001b[0m 7.431e+0\u001b[0m | \u001b[0m 1.9e+03 \u001b[0m | \u001b[0m 2.405e+0\u001b[0m |\n",
+      "| \u001b[0m 10      \u001b[0m | \u001b[0m 0.7434  \u001b[0m | \u001b[0m 0.01076 \u001b[0m | \u001b[0m 0.01911 \u001b[0m | \u001b[0m 55.1    \u001b[0m | \u001b[0m 6.844e+0\u001b[0m | \u001b[0m 1.646e+0\u001b[0m | \u001b[0m 2.464e+0\u001b[0m |\n",
+      "| \u001b[0m 11      \u001b[0m | \u001b[0m 0.7435  \u001b[0m | \u001b[0m 0.002653\u001b[0m | \u001b[0m 0.0238  \u001b[0m | \u001b[0m 44.02   \u001b[0m | \u001b[0m 8.099e+0\u001b[0m | \u001b[0m 1.819e+0\u001b[0m | \u001b[0m 1.856e+0\u001b[0m |\n",
+      "| \u001b[0m 12      \u001b[0m | \u001b[0m 0.7435  \u001b[0m | \u001b[0m 0.03091 \u001b[0m | \u001b[0m 0.01736 \u001b[0m | \u001b[0m 44.37   \u001b[0m | \u001b[0m 6.931e+0\u001b[0m | \u001b[0m 1.756e+0\u001b[0m | \u001b[0m 3.619e+0\u001b[0m |\n",
+      "=================================================================================================\n"
      ]
     }
    ],
@@ -958,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:49:01.513767Z",
@@ -968,7 +1003,24 @@
     "colab_type": "code",
     "id": "oc8z6mfy-KZS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.7437314941619092,\n",
+       " 'params': {'lambda_l1': 0.012135122586258063,\n",
+       "  'lambda_l2': 0.014214524245273065,\n",
+       "  'max_depth': 60.36407479598665,\n",
+       "  'min_child_samples': 9992.894433734145,\n",
+       "  'min_data_in_leaf': 1947.59225754556,\n",
+       "  'num_leaves': 3997.9466427189654}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lgbBO.max"
    ]
@@ -989,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:51:01.001688Z",
@@ -999,10 +1051,34 @@
     "colab_type": "code",
     "id": "X1ttZmrI-KZX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.72458024341443,\n",
+       " 'params': {'lambda_l1': 0.03232477433981221,\n",
+       "  'lambda_l2': 0.03704885566431383,\n",
+       "  'max_depth': 17.642987060425764,\n",
+       "  'min_child_samples': 1124.4897362859258,\n",
+       "  'min_data_in_leaf': 601.7837162972694,\n",
+       "  'num_leaves': 66.78787799400845}}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lgbBO.res[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1026,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "varInspector": {
    "cols": {
